baml_language/crates/baml_tests/snapshots/void_return_type/baml_tests__void_return_type__01_lexer__void_function_type.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Void"
In "in"
Word "function-type"
Return "return"
Word "position"
Word "type"
Word "Callback"
Equals "="
LParen "("
Word "int"
RParen ")"
Arrow "->"
Word "void"
Slash "/"
Slash "/"
Word "Higher-order"
Function "function"
Word "taking"
Word "a"
Word "void"
Word "callback"
Function "function"
Word "run_callback"
LParen "("
Word "cb"
Colon ":"
Word "Callback"
Comma ","
Word "x"
Colon ":"
Word "int"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Word "cb"
LParen "("
Word "x"
RParen ")"
Semicolon ";"
Word "x"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "assigning"
Word "void"
Word "callback"
Word "result"
Function "function"
Word "bad_callback_use"
LParen "("
Word "cb"
Colon ":"
Word "Callback"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "result"
Equals "="
Word "cb"
LParen "("
IntegerLiteral "1"
RParen ")"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
