baml_language/crates/baml_tests/snapshots/void_return_type/baml_tests__void_return_type__01_lexer__void_type_position_errors.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "void"
Word "as"
Word "parameter"
Word "type"
Function "function"
Word "bad_param"
LParen "("
Word "x"
Colon ":"
Word "void"
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "void"
Word "as"
Let "let"
Word "annotation"
Function "function"
Word "bad_let"
LParen "("
RParen ")"
Arrow "->"
Word "int"
LBrace "{"
Let "let"
Word "x"
Colon ":"
Word "void"
Equals "="
IntegerLiteral "1"
Semicolon ";"
IntegerLiteral "1"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "void"
In "in"
Word "optional"
Word "wrapper"
Function "function"
Word "bad_optional"
LParen "("
RParen ")"
Arrow "->"
Word "void"
Question "?"
LBrace "{"
Word "null"
RBrace "}"
Slash "/"
Slash "/"
Word "ERROR"
Colon ":"
Word "void"
In "in"
Word "list"
Function "function"
Word "bad_list"
LParen "("
RParen ")"
Arrow "->"
Word "void"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
RBracket "]"
RBrace "}"
